fix: changed the theme-color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://devbyandrei.vercel.app" />
     <meta property="og:type" content="website" />
 
-    <meta name="theme-color" content="#ff3333" />
+    <meta name="theme-color" content="#171717" />
 
     <script type="module" src="/src/main.jsx"></script>
   </head>
