fix: changed the css import

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <meta name="theme-color" content="#171717" />
 
     <script type="module" src="/src/main.jsx"></script>
+
+    <link rel="preload" href="/src/styles/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="/src/styles/index.css"></noscript>
   </head>
 
   <body>
