fix: Add preload for LCP image to improve performance and visibility

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
     <link rel="preload" href="/src/styles/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/src/styles/index.css"></noscript>
+
+    <link rel="preload" as="image" href="assets/images/profile/andrei.webp" fetchpriority="high">
+
   </head>
 
   <body>
